--- a/src/AlgorithmExplorer.Desktop/MainWindow.xaml
+++ b/src/AlgorithmExplorer.Desktop/MainWindow.xaml
@@ -1,12 +1,29 @@
-﻿<Window x:Class="AlgorithmExplorer.Desktop.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AlgorithmExplorer.Desktop"
+        xmlns:oxy="http://oxyplot.org/wpf" xmlns:System="clr-namespace:System;assembly=System.Runtime" x:Class="AlgorithmExplorer.Desktop.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+        Title="MainWindow" Height="450" Width="859">
+    <Window.DataContext>
+        <local:MainViewModel/>
+    </Window.DataContext>
+    <Grid Background="#FF65ABC7" HorizontalAlignment="Center" Width="859">
+        <oxy:PlotView x:Name="MainPlot" HorizontalAlignment="Left" Height="320" Margin="6,96,0,0" VerticalAlignment="Top" Width="553"/>
+        <Button x:Name="StartButton" Content="Начать" HorizontalAlignment="Left" Height="60" Margin="616,306,0,0" VerticalAlignment="Top" Width="139" Click="StartButton_Click"/>
+        <ListBox x:Name="AlgListBox" HorizontalAlignment="Left" Height="37" Margin="226,41,0,0" VerticalAlignment="Top" Width="248" FontFamily="Verdana">
+            <System:String>BubbleSort</System:String>
+            <System:String>ConstFunc</System:String>
+            <System:String>Kanade</System:String>
+        </ListBox>
+        <TextBlock x:Name="InputLength" HorizontalAlignment="Left" Height="29" Margin="616,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="139" Background="White" FontFamily="Verdana"/>
+        <TextBlock x:Name="InputNumOfRep" HorizontalAlignment="Left" Height="26" Margin="616,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="139" Background="White" FontFamily="Verdana"/>
+        <Label x:Name="LableInpLen" Content="Введите длину вектора" HorizontalAlignment="Left" Margin="590,26,0,0" VerticalAlignment="Top" FontFamily="Verdana"/>
+        <Label x:Name="LableInpNOR" Content="Введите кол-во повторений" HorizontalAlignment="Left" Margin="576,84,0,0" VerticalAlignment="Top" FontFamily="Verdana"/>
+        <Label x:Name="LableAlg" Content="Выберите Алгоритм" HorizontalAlignment="Left" Margin="238,10,0,0" VerticalAlignment="Top" FontFamily="Verdana"/>
+        <TextBlock x:Name="InputForPow" HorizontalAlignment="Left" Height="28" Margin="616,238,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="139" Background="White" FontFamily="Verdana"/>
+        <Label Content="Введите основание &#xD;&#xA;степени" HorizontalAlignment="Left" Height="64" Margin="587,0,0,0" VerticalAlignment="Center" Width="248" FontFamily="Verdana"/>
     </Grid>
 </Window>
