--- a/src/AlgorithmExplorer.Desktop/App.xaml
+++ b/src/AlgorithmExplorer.Desktop/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="AlgorithmExplorer.Desktop.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:AlgorithmExplorer.Desktop"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:AlgorithmExplorer.Desktop">
     <Application.Resources>
          
     </Application.Resources>
