--- a/src/AlgorithmExplorer.Desktop/MainWindow.xaml
+++ b/src/AlgorithmExplorer.Desktop/MainWindow.xaml
@@ -25,5 +25,6 @@
         <Label x:Name="LableAlg" Content="Выберите Алгоритм" HorizontalAlignment="Left" Margin="238,10,0,0" VerticalAlignment="Top" FontFamily="Verdana"/>
         <TextBlock x:Name="InputForPow" HorizontalAlignment="Left" Height="28" Margin="616,238,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="139" Background="White" FontFamily="Verdana"/>
         <Label Content="Введите основание &#xD;&#xA;степени" HorizontalAlignment="Left" Height="64" Margin="587,0,0,0" VerticalAlignment="Center" Width="248" FontFamily="Verdana"/>
+        <Button Content="Галя,ОТМЕНА" HorizontalAlignment="Left" Height="45" Margin="704,371,0,0" VerticalAlignment="Top" Width="143" Click="Button_Click"/>
     </Grid>
 </Window>
