--- a/src/AlgorithmExplorer.Desktop/MainWindow.xaml
+++ b/src/AlgorithmExplorer.Desktop/MainWindow.xaml
@@ -6,29 +6,38 @@
         xmlns:local="clr-namespace:AlgorithmExplorer.Desktop"
         xmlns:oxy="http://oxyplot.org/wpf" xmlns:System="clr-namespace:System;assembly=System.Runtime" x:Class="AlgorithmExplorer.Desktop.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1000">
+        Title="MainWindow" Height="1000" Width="1500">
     <Window.DataContext>
         <local:MainViewModel/>
     </Window.DataContext>
     <Grid Background="#FF65ABC7">
-        <oxy:PlotView x:Name="MainPlot" Margin="6,96,332,10"/>
-        <Button x:Name="StartButton" Content="Начать" Margin="0,228,24,0" Click="StartButton_Click" RenderTransformOrigin="1.189,0.348" Height="60" VerticalAlignment="Top" HorizontalAlignment="Right" Width="138"/>
-        <ListBox x:Name="AlgListBox" HorizontalAlignment="Left" Height="37" Margin="31,41,0,0" VerticalAlignment="Top" Width="248" FontFamily="Verdana">
+        <oxy:PlotView x:Name="MainPlot" Margin="6,229,536,10" RenderTransformOrigin="0.5,0.5">
+            <oxy:PlotView.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.075"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </oxy:PlotView.RenderTransform>
+        </oxy:PlotView>
+        <Button x:Name="StartButton" Content="Начать" Margin="0,104,329,0" Click="StartButton_Click" RenderTransformOrigin="1.189,0.348" Height="60" VerticalAlignment="Top" HorizontalAlignment="Right" Width="138"/>
+        <ListBox x:Name="AlgListBox" HorizontalAlignment="Left" Height="124" Margin="31,41,0,0" VerticalAlignment="Top" Width="286" FontFamily="Verdana">
             <System:String>BubbleSort</System:String>
             <System:String>ConstFunc</System:String>
             <System:String>Kanade</System:String>
         </ListBox>
-        <Label x:Name="LableInpLen" Content="Введите длину вектора" Margin="0,10,0,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Center" Width="229"/>
-        <Label x:Name="LableInpNOR" Content="Введите кол-во повторений" Margin="0,7,48,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Right" Width="271"/>
+        <Label x:Name="LableInpLen" Content="Введите длину вектора" Margin="422,10,0,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="228"/>
+        <Label x:Name="LableInpNOR" Content="Введите кол-во повторений" Margin="400,113,0,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="272"/>
         <Label x:Name="LableAlg" Content="Выберите Алгоритм" HorizontalAlignment="Left" Margin="43,10,0,0" VerticalAlignment="Top" FontFamily="Verdana"/>
-        <Label Content="Введите основание &#xD;&#xA;степени" Height="64" Margin="0,101,38,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Right" Width="248"/>
-        <Button Content="Галя,ОТМЕНА" Margin="0,331,19,0" Click="Button_Click" Height="45" VerticalAlignment="Top" HorizontalAlignment="Right" Width="143" RenderTransformOrigin="0.305,-0.928"/>
-        <TextBox x:Name="InputLength" Height="37" Margin="0,47,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Center" Width="139"/>
-        <TextBox x:Name="InputNOR" Height="36" Margin="0,44,72,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Right" Width="139"/>
-        <TextBox x:Name="InputForPow" Height="39" Margin="0,160,78,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Right" Width="139"/>
-        <Label x:Name="AprText" Height="42" Margin="0,368,195,0" VerticalAlignment="Top" Content="Функция" FontFamily="Verdana" RenderTransformOrigin="0.772,0.561" HorizontalAlignment="Right" Width="124"/>
-        <TextBlock x:Name="TxBlApr" Margin="0,415,10,0" TextWrapping="Wrap" FontFamily="Verdana" Background="White" UseLayoutRounding="True" Height="151" VerticalAlignment="Top" HorizontalAlignment="Right" Width="309" DataContext="{Binding aprPolin}" ScrollViewer.VerticalScrollBarVisibility="Auto" Padding="2,0,0,0"/>
-        <TextBlock x:Name="TxBlDeviation" HorizontalAlignment="Right" Height="66" Margin="0,288,195,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="124" Background="White" FontFamily="Verdana"/>
-        <Label Content="Отклонение" HorizontalAlignment="Right" Height="31" Margin="0,252,210,0" VerticalAlignment="Top" Width="109" FontFamily="Vivaldi"/>
+        <Label Content="Введите основание &#xD;&#xA;степени" Height="64" Margin="0,55,530,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Right" Width="248"/>
+        <Button Content="Галя,ОТМЕНА" Margin="0,702,53,0" Click="Button_Click" Height="45" VerticalAlignment="Top" HorizontalAlignment="Right" Width="143" RenderTransformOrigin="0.305,-0.928"/>
+        <TextBox x:Name="InputLength" Height="37" Margin="426,47,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="223"/>
+        <TextBox x:Name="InputNOR" Height="36" Margin="426,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="223"/>
+        <TextBox x:Name="InputForPow" Height="39" Margin="0,114,570,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Right" Width="208"/>
+        <Label x:Name="AprText" Height="42" Margin="0,368,343,0" VerticalAlignment="Top" Content="Функция" FontFamily="Verdana" RenderTransformOrigin="0.772,0.561" HorizontalAlignment="Right" Width="124"/>
+        <TextBlock x:Name="TxBlApr" Margin="0,415,10,0" TextWrapping="Wrap" FontFamily="Verdana" Background="White" UseLayoutRounding="True" Height="218" VerticalAlignment="Top" HorizontalAlignment="Right" Width="461" DataContext="{Binding aprPolin}" ScrollViewer.VerticalScrollBarVisibility="Auto" Padding="2,0,0,0"/>
+        <TextBlock x:Name="TxBlDeviation" HorizontalAlignment="Right" Height="66" Margin="0,288,257,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="214" Background="White" FontFamily="Verdana"/>
+        <Label Content="Отклонение" HorizontalAlignment="Right" Height="31" Margin="0,252,331,0" VerticalAlignment="Top" Width="140" FontFamily="Verdana"/>
     </Grid>
 </Window>
