--- a/src/AlgorithmExplorer.Desktop/MainWindow.xaml
+++ b/src/AlgorithmExplorer.Desktop/MainWindow.xaml
@@ -11,7 +11,7 @@
         <local:MainViewModel/>
     </Window.DataContext>
     <Grid Background="#FF65ABC7">
-        <oxy:PlotView x:Name="MainPlot" Margin="6,229,536,10" RenderTransformOrigin="0.5,0.5">
+        <oxy:PlotView x:Name="MainPlot" Margin="6,280,536,10" RenderTransformOrigin="0.5,0.5">
             <oxy:PlotView.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -21,23 +21,23 @@
                 </TransformGroup>
             </oxy:PlotView.RenderTransform>
         </oxy:PlotView>
-        <Button x:Name="StartButton" Content="Начать" Margin="0,104,329,0" Click="StartButton_Click" RenderTransformOrigin="1.189,0.348" Height="60" VerticalAlignment="Top" HorizontalAlignment="Right" Width="138"/>
-        <ListBox x:Name="AlgListBox" HorizontalAlignment="Left" Height="124" Margin="31,41,0,0" VerticalAlignment="Top" Width="286" FontFamily="Verdana">
+        <Button x:Name="StartButton" Content="Начать" Margin="0,748,257,0" Click="StartButton_Click" RenderTransformOrigin="1.189,0.348" Height="80" VerticalAlignment="Top" HorizontalAlignment="Right" Width="196"/>
+        <ListBox x:Name="AlgListBox" HorizontalAlignment="Left" Height="203" Margin="31,41,0,0" VerticalAlignment="Top" Width="286" FontFamily="Verdana">
             <System:String>BubbleSort</System:String>
             <System:String>ConstFunc</System:String>
             <System:String>Kanade</System:String>
         </ListBox>
-        <Label x:Name="LableInpLen" Content="Введите длину вектора" Margin="422,10,0,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="228"/>
-        <Label x:Name="LableInpNOR" Content="Введите кол-во повторений" Margin="400,113,0,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="272"/>
+        <Label x:Name="LableInpLen" Content="Введите длину вектора" Margin="422,-4,0,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="228"/>
+        <Label x:Name="LableInpNOR" Content="Введите кол-во повторений" Margin="426,68,0,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="272"/>
         <Label x:Name="LableAlg" Content="Выберите Алгоритм" HorizontalAlignment="Left" Margin="43,10,0,0" VerticalAlignment="Top" FontFamily="Verdana"/>
-        <Label Content="Введите основание &#xD;&#xA;степени" Height="64" Margin="0,55,530,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Right" Width="248"/>
-        <Button Content="Галя,ОТМЕНА" Margin="0,702,53,0" Click="Button_Click" Height="45" VerticalAlignment="Top" HorizontalAlignment="Right" Width="143" RenderTransformOrigin="0.305,-0.928"/>
-        <TextBox x:Name="InputLength" Height="37" Margin="426,47,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="223"/>
-        <TextBox x:Name="InputNOR" Height="36" Margin="426,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="223"/>
-        <TextBox x:Name="InputForPow" Height="39" Margin="0,114,570,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Right" Width="208"/>
-        <Label x:Name="AprText" Height="42" Margin="0,368,343,0" VerticalAlignment="Top" Content="Функция" FontFamily="Verdana" RenderTransformOrigin="0.772,0.561" HorizontalAlignment="Right" Width="124"/>
-        <TextBlock x:Name="TxBlApr" Margin="0,415,10,0" TextWrapping="Wrap" FontFamily="Verdana" Background="White" UseLayoutRounding="True" Height="218" VerticalAlignment="Top" HorizontalAlignment="Right" Width="461" DataContext="{Binding aprPolin}" ScrollViewer.VerticalScrollBarVisibility="Auto" Padding="2,0,0,0"/>
-        <TextBlock x:Name="TxBlDeviation" HorizontalAlignment="Right" Height="66" Margin="0,288,257,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="214" Background="White" FontFamily="Verdana"/>
-        <Label Content="Отклонение" HorizontalAlignment="Right" Height="31" Margin="0,252,331,0" VerticalAlignment="Top" Width="140" FontFamily="Verdana"/>
+        <Label Content="Введите основание &#xD;&#xA;степени" Height="64" Margin="426,141,0,0" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="248"/>
+        <Button Content="Галя,ОТМЕНА" Margin="0,748,10,0" Click="Button_Click" Height="75" VerticalAlignment="Top" HorizontalAlignment="Right" Width="196" RenderTransformOrigin="0.305,-0.928"/>
+        <TextBox x:Name="InputLength" Height="37" Margin="426,28,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="223"/>
+        <TextBox x:Name="InputNOR" Height="36" Margin="426,105,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="223"/>
+        <TextBox x:Name="InputForPow" Height="39" Margin="422,205,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Verdana" HorizontalAlignment="Left" Width="208"/>
+        <Label x:Name="AprText" Height="42" Margin="0,423,331,0" VerticalAlignment="Top" Content="Функция" FontFamily="Verdana" RenderTransformOrigin="0.772,0.561" HorizontalAlignment="Right" Width="124"/>
+        <TextBlock x:Name="TxBlApr" Margin="0,470,10,0" TextWrapping="Wrap" FontFamily="Verdana" Background="White" UseLayoutRounding="True" Height="218" VerticalAlignment="Top" HorizontalAlignment="Right" Width="461" DataContext="{Binding aprPolin}" ScrollViewer.VerticalScrollBarVisibility="Auto" Padding="2,0,0,0"/>
+        <TextBlock x:Name="TxBlDeviation" HorizontalAlignment="Right" Height="66" Margin="0,352,257,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="214" Background="White" FontFamily="Verdana"/>
+        <Label Content="Отклонение" HorizontalAlignment="Right" Height="31" Margin="0,316,331,0" VerticalAlignment="Top" Width="140" FontFamily="Verdana"/>
     </Grid>
 </Window>
