--- a/src/AlgorithmExplorer.Desktop/MainWindow.xaml
+++ b/src/AlgorithmExplorer.Desktop/MainWindow.xaml
@@ -45,5 +45,8 @@
         <Label Content="Введите начальный шаг" HorizontalAlignment="Left" Height="31" Margin="739,162,0,0" VerticalAlignment="Top" Width="240" FontFamily="Verdana"/>
         <TextBox x:Name="TxBxApr" HorizontalAlignment="Left" Height="36" Margin="1029,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="212" FontFamily="Verdana"/>
         <Label Content="Введите степень аппроксимации" HorizontalAlignment="Left" Height="33" Margin="1029,10,0,0" VerticalAlignment="Top" Width="170" FontFamily="Verdana"/>
+        <ProgressBar Name="AlgorithmProgressBar" Minimum="0" Height="46" Margin="1035,258,20,0" VerticalAlignment="Top"/>
+        <Label Content="Прогресс:" Margin="1035,226,401,0" VerticalAlignment="Top" RenderTransformOrigin="0.255,0.695"/>
+        <Label Content="Label" Name="ProgressLabel" Margin="1107,226,355,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
