little correction GUI

--- a/src/AlgorithmExplorer.Desktop/MainWindow.xaml
+++ b/src/AlgorithmExplorer.Desktop/MainWindow.xaml
@@ -47,6 +47,6 @@
         <Label Content="Введите степень аппроксимации" HorizontalAlignment="Left" Height="33" Margin="1029,10,0,0" VerticalAlignment="Top" Width="170" FontFamily="Verdana"/>
         <ProgressBar Name="AlgorithmProgressBar" Minimum="0" Height="46" Margin="0,258,20,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="445"/>
         <Label Content="Прогресс:" Margin="0,226,374,0" VerticalAlignment="Top" RenderTransformOrigin="0.255,0.695" HorizontalAlignment="Right" Width="91"/>
-        <Label Content="Label" Name="ProgressLabel" Margin="1131,226,331,0" VerticalAlignment="Top"/>
+        <Label Content="Label" Name="ProgressLabel" Margin="0,226,331,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="38"/>
     </Grid>
 </Window>
